tests/type_check/control_flow/branch_false_label_undefined.err.expected
error: at 4:13: [TC-TerminatorUndefinedTarget] In function 'f', block 'entry': branch false target undefined block 'nowhere'
   |
 4 |             branch(copy b) [true: yes, false: nowhere]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
